// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`r-avatar.vue should render Wrapper and match snapshot 1`] = `
<div class="r-avatar r-avatar-description">
  <div class="r-avatar-main fs-block">
    <div class="r-avatar-initials r-avatar-initials-accent"><span class="r-avatar-initials-value">RB</span></div>
    <!---->
    <!---->
  </div>
  <div class="r-avatar-info">
    <!----> Avatar component</div>
</div>
`;

exports[`r-avatar.vue should render icon 1`] = `
<div class="r-avatar r-avatar-description">
  <div class="r-avatar-main fs-block">
    <!---->
    <div class="r-avatar-icon-wrapper"><svg class="r-icon r-icon-20 r-avatar-icon">
        <use xlink:href="#icon-heart" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
      </svg></div>
    <!---->
  </div>
  <div class="r-avatar-info">
    <!---->
  </div>
</div>
`;

exports[`r-avatar.vue should render image 1`] = `
<div class="r-avatar r-avatar-description">
  <div class="r-avatar-main fs-block">
    <!---->
    <!---->
    <div class="r-avatar-image-wrapper">
      <figure role="img" class="r-component r-img r-avatar-image"><img src="https://www.meme-arsenal.com/memes/86b1de6ff6981be012d40bf26c6992ab.jpg" alt="Image" class="r-img-image">
        <div class="r-img-loading-spinner"></div>
      </figure>
    </div>
  </div>
  <div class="r-avatar-info">
    <!---->
  </div>
</div>
`;

exports[`r-avatar.vue should render via SSR and match snapshot 1`] = `
<div class="r-avatar r-avatar-description">
  <div class="r-avatar-main">
    <div class="r-avatar-initials r-avatar-initials-yellow"><span class="r-avatar-initials-value">VP</span></div>
    <!---->
    <!---->
  </div>
  <div class="r-avatar-info">
    <!----> Avatar component</div>
</div>
`;

exports[`r-avatar.vue should trigger validation warning 1`] = `
<div class="r-avatar r-avatar-description">
  <div class="r-avatar-main fs-block">
    <div class="r-avatar-initials r-avatar-initials-green"><span class="r-avatar-initials-value">Rebilly</span></div>
    <!---->
    <!---->
  </div>
  <div class="r-avatar-info">
    <!---->
  </div>
</div>
`;
